# iam-rust

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.id.md  README.md  ROADMAP.md  iam.postman_collection.json  iam.postman_environment.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
IAM — User & Auth (Go - Rust)/: opencollection.yml
IAM — User & Auth (Go - Rust)/Account/: List Audit Log (needs audit-read).yml  Request Email Verification.yml  Request Password Reset.yml  Reset Password.yml  Verify Email.yml
IAM — User & Auth (Go - Rust)/Auth/: Login (admin).yml  Login (user).yml  Logout.yml  Refresh.yml  Register.yml
IAM — User & Auth (Go - Rust)/Health/: Healthz.yml
IAM — User & Auth (Go - Rust)/RBAC/: Assign Role to User (needs role-assign).yml  Create Role (needs role-write).yml  Delete Role (needs role-write).yml  Grant Permission to Role (needs role-write).yml  List Permissions (needs role-read).yml  List Roles (needs role-read).yml  Revoke Permission from Role (needs role-write).yml  Revoke Role from User (needs role-assign).yml  Update Role (needs role-write).yml  folder.yml
IAM — User & Auth (Go - Rust)/Users/: Delete User (needs user-delete).yml  Get My Profile.yml  Get User by ID (needs user-read).yml  List Users (needs user-read).yml  My Identity (roles & permissions).yml  Update Profile (self or profile-write).yml
IAM — User & Auth (Go - Rust)/environments/: IAM — Local.yml
bench/: load.js
crates/auth-service/: Cargo.toml
crates/auth-service/migrations/: 0001_init.sql  0002_seed_rbac.sql  0003_role_write.sql  0004_revoked_tokens.sql  0005_security_plus.sql  0006_outbox.sql
crates/auth-service/src/: grpc.rs  main.rs  relay.rs  repo.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  lib.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: router.rs
crates/proto/: Cargo.toml  build.rs
crates/user-service/: Cargo.toml
crates/user-service/src/: main.rs  repo.rs
deploy/: .env.example  docker-compose.yml  postgres-init.sql
deploy/k8s/: auth.yaml  config.yaml  gateway.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  nats.yaml  networkpolicy.yaml  postgres.yaml  user.yaml
deploy/observability/: prometheus.yml
deploy/observability/grafana/provisioning/dashboards/: iam.json  provider.yml
docs/en/: README.md  api-collections.md  api-reference.md  architecture.md  deployment.md  development.md  multi-tenant.md  rbac.md  security.md
docs/id/: README.md  api-collections.md  api-reference.md  architecture.md  deployment.md  development.md  multi-tenant.md  rbac.md  security.md
proto/auth/v1/: auth.proto
scripts/: gen-certs.sh  smoke.sh
