[package]
name = "auth-service"
version.workspace = true
edition.workspace = true

[[bin]]
name = "auth-service"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
proto = { path = "../proto" }
tokio.workspace = true
tonic.workspace = true
tonic-health.workspace = true
prost.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
sha2.workspace = true
hex.workspace = true
rand.workspace = true
tracing.workspace = true
anyhow.workspace = true
async-nats.workspace = true
serde_json.workspace = true
