[package]
name = "common"
version.workspace = true
edition.workspace = true

[dependencies]
jsonwebtoken.workspace = true
argon2.workspace = true
serde.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rand.workspace = true
async-nats.workspace = true
serde_json.workspace = true
anyhow.workspace = true
