[package]
name = "gateway"
version.workspace = true
edition.workspace = true

[[bin]]
name = "gateway"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
proto = { path = "../proto" }
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
