[package]
name = "user-service"
version.workspace = true
edition.workspace = true

[[bin]]
name = "user-service"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
proto = { path = "../proto" }
tokio.workspace = true
tonic.workspace = true
tonic-health.workspace = true
prost.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
anyhow.workspace = true
